# agentic

./: .eslintrc.json  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  action.yml  entrypoint.sh  jsdoc.json  justfile  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  sonar-project.properties  tox.ini  vitest.config.ts
.cursor/rules/: 00-fundamentals.mdc  03-docs-branding.mdc
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: cd.yml  ci.yml  claude-code.yml  deploy-docs.yml  deploy.yml  docs-push.yml  docs.yml  ecosystem-connector.yml  ecosystem-delegator.yml  ecosystem-reviewer.yml  monitor.yml  ollama-pr-review.yml  release.yml  sonarcloud.yml  test-orchestrator.yml
.kiro/settings/: mcp.json.backup.20251209_191847
.kiro/specs/production-release/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
actions/agentic-ci-resolution/: action.yml
actions/agentic-issue-triage/: action.yml
actions/agentic-orchestrator/: action.yml
actions/agentic-pr-review/: action.yml
actions/merge-queue/: package.json
actions/merge-queue/src/: index.ts
docs/: astro.config.mjs  conf.py  development  examples  getting-started  package-lock.json  package.json  playwright.config.ts  project.json  requirements.txt  vitest.config.ts
docs/architecture/: crew-integration.md
docs/development/: contributing.md
docs/examples/: advanced-patterns.md
docs/getting-started/: installation.md
docs/plans/: 2026-02-24-monorepo-consolidation-design.md  2026-02-24-monorepo-consolidation-plan.md
docs/public/: CNAME
docs/sphinx/: DESIGN-SYSTEM.md  conf.py  index.rst
docs/sphinx/_static/: custom.css  jbcom-sphinx.css  typedoc.css
docs/sphinx/examples/: integration.md
docs/src/content/docs/: index.mdx
docs/src/content/docs/api/: configuration.md  fleet-management.md  token-management.md  triage-tools.md
docs/src/content/docs/api/control/: README.md
docs/src/content/docs/api/control/classes/: AIAnalyzer.md  ConfigurationError.md  ContainerManager.md  CrewTool.md  CrewToolError.md  CursorAPI.md  DockerBuildError.md  Fleet.md  GitHubClient.md  HandoffManager.md  SandboxError.md  SandboxExecutor.md
docs/src/content/docs/api/control/enumerations/: ConfigErrorCode.md  DockerErrorCode.md  SandboxErrorCode.md
docs/src/content/docs/api/control/functions/: addOrganization.md  clearProviderCache.md  cloneRepo.md  createSafeError.md  extractOrg.md  getConfig.md  getConfigPath.md  getConfigValue.md  getConfiguredOrgs.md  getCursorApiKey.md  getDefaultApiKeyEnvVar.md  getDefaultModel.md  getEnvForPRReview.md  getEnvForRepo.md  getFleetDefaults.md  getLogLevel.md  getOrLoadProvider.md  getOrgConfig.md  getPRReviewToken.md  getPRReviewTokenEnvVar.md  getSupportedProviders.md  getTokenConfig.md  getTokenEnvVar.md  getTokenForOrg.md  getTokenForRepo.md  getTokenSummary.md  getTriageApiKey.md  getTriageConfig.md  hasTokenForOrg.md  hasTokenForRepo.md  (+25 more)
docs/src/content/docs/api/crew/: index.md
docs/src/content/docs/api/game-gen/: index.md
docs/src/content/docs/api/meshy/: README.md
docs/src/content/docs/api/providers/: README.md
docs/src/content/docs/api/triage/: README.md
docs/src/content/docs/api/vitest/: README.md
docs/src/content/docs/examples/: cli-workflows.md  python.md  typescript.md
docs/src/content/docs/getting-started/: configuration.md  introduction.md  quick-start.md
docs/src/content/docs/guides/: agent-spawning.md  ai-triage.md  architecture.md  fleet-management.md  orchestration-patterns.md  sandbox-execution.md  troubleshooting.md
docs/src/content/docs/integrations/: crewai.md  github-actions.md  langgraph.md  mcp-server.md  vercel-ai-sdk.md
docs/src/styles/: custom.css
docs/tests/e2e/: accessibility.spec.ts  navigation.spec.ts
docs/tests/unit/: build-output.test.ts  config.test.ts
memory-bank/: activeContext.md
node-compile-cache/v24.12.0-x64-cf738c9d-0/: 2c7de4d2  56540125  70789e9d  8e6bdeab
python/tests/: test_file_tools.py
scripts/: build-deps.js  ecosystem-curator.mjs
scripts/brand-assets/: .gitignore  README.md  generate.sh
scripts/brand-assets/hero-image/: manifest.json
scripts/brand-assets/icon-concept/: manifest.json
scripts/brand-assets/og-background/: manifest.json
src/: cli.ts  index.ts
src/core/: config.ts  errors.ts  index.ts  security.ts  subprocess.ts  validation.ts
src/fleet/: fleet.ts
src/sandbox/: container.ts  executor.ts  index.ts  types.ts
src/sandbox/runtime/: claude.ts  cursor.ts  index.ts
src/triage/: analyzer.ts
tests/: production-release.test.ts
(+375 files in other folders)
