[project]
name = "agentic-monorepo"
version = "0.0.0"
description = "Agentic Dev Library - polyglot monorepo"
requires-python = ">=3.11"
readme = "README.md"
license = "MIT"
authors = [{ name = "Jon Bogaty" }]

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/agentic-crew", "packages/pytest-agentic-crew"]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "mypy>=1.15",
    "pytest>=8.3",
    "pytest-cov>=6.1",
    "pytest-asyncio>=0.25",
    "pytest-timeout>=2.3",
    "pytest-mock>=3.14",
]
docs = [
    "sphinx>=8.2",
    "myst-parser>=4.0",
    "sphinx-rtd-theme>=3.0",
    "sphinx-autodoc2>=0.5",
    "sphinx-markdown-builder>=0.6",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["packages/agentic-crew", "packages/pytest-agentic-crew"]
markers = [
    "e2e: end-to-end tests (may require external services)",
    "slow: slow-running tests",
    "crewai: tests specific to the CrewAI framework backend",
    "langgraph: tests specific to the LangGraph framework backend",
    "strands: tests specific to the Strands framework backend",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
